Apply version name of 10.1-XPRESS-SNAPSHOT
git-svn-id: https://svn.forgerock.org/openam/branches/maven_branch_01@2488 0f4defcf-c51a-4c67-9f44-6fb5eba73c5d